--- a/GeometricProgramming/GeometricProgramming.vcxproj.filters
+++ b/GeometricProgramming/GeometricProgramming.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Point.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Line.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Algorithms.h">
