--- a/GeometricProgramming/GeometricProgramming.vcxproj.filters
+++ b/GeometricProgramming/GeometricProgramming.vcxproj.filters
@@ -32,5 +32,25 @@
     <ClInclude Include="Algorithms.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Point.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Line.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="poly00.txt" />
+    <Text Include="poly01.txt" />
+    <Text Include="poly02.txt" />
+    <Text Include="poly03.txt" />
+    <Text Include="poly04.txt" />
+    <Text Include="poly05.txt" />
+    <Text Include="poly06.txt" />
+    <Text Include="poly07.txt" />
+    <Text Include="poly08.txt" />
+    <Text Include="poly09.txt" />
+    <Text Include="poly10.txt" />
+    <Text Include="poly11.txt" />
   </ItemGroup>
 </Project>
