--- a/GeometricProgramming/GeometricProgramming.vcxproj.filters
+++ b/GeometricProgramming/GeometricProgramming.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Line.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Utilities.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Algorithms.h">
@@ -36,6 +39,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Line.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Utilities.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -52,5 +61,10 @@
     <Text Include="poly09.txt" />
     <Text Include="poly10.txt" />
     <Text Include="poly11.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="GeometricProgramming.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
