--- a/GeometricProgramming/GeometricProgramming.vcxproj
+++ b/GeometricProgramming/GeometricProgramming.vcxproj
@@ -161,6 +161,7 @@
     <Text Include="lineText5.txt" />
     <Text Include="lineText6.txt" />
     <Text Include="lineText7.txt" />
+    <Text Include="lineTextJ.txt" />
     <Text Include="poly00.txt" />
     <Text Include="poly01.txt" />
     <Text Include="poly02.txt" />
